[gd_scene load_steps=16 format=3 uid="uid://cnivq5x3pn6cr"]

[ext_resource type="Material" uid="uid://d0mxw0twcpkls" path="res://Assets/Materials/Ice/ice.tres" id="1_q2uwy"]
[ext_resource type="Material" uid="uid://ka1ngl72m45s" path="res://Assets/Materials/SnowParticle/snow-particle.tres" id="2_e304g"]
[ext_resource type="PackedScene" uid="uid://1a0i72xpxodg" path="res://Player/player.tscn" id="2_q2uwy"]
[ext_resource type="AudioStream" uid="uid://dwiqpp2kuhmt3" path="res://Assets/Audio/wind.mp3" id="3_n7ce1"]
[ext_resource type="Script" uid="uid://dto5xu1sp356w" path="res://Scripts/Audio/random_audio_start.gd" id="4_5ulvj"]
[ext_resource type="ArrayMesh" uid="uid://do4uqx1m321p1" path="res://Assets/Models/lighthouse.obj" id="5_g86mt"]
[ext_resource type="Script" uid="uid://dqiqxpxds8shn" path="res://Scripts/Lighthouse/teleport_area.gd" id="7_jvpjp"]
[ext_resource type="Script" uid="uid://bjhuygaqnea2o" path="res://Scripts/General/fade_rect.gd" id="8_t871u"]

[sub_resource type="QuadMesh" id="QuadMesh_g86mt"]
material = ExtResource("2_e304g")
size = Vector2(0.1, 0.1)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qetym"]

[sub_resource type="Sky" id="Sky_q2uwy"]
sky_material = SubResource("ProceduralSkyMaterial_qetym")

[sub_resource type="Environment" id="Environment_5e1uj"]
sky = SubResource("Sky_q2uwy")
ambient_light_source = 3
fog_enabled = true
fog_light_color = Color(0.2106368, 0.23213801, 0.26559368, 1)
fog_density = 0.1283

[sub_resource type="PlaneMesh" id="PlaneMesh_qetym"]
size = Vector2(1000, 1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_q2uwy"]
size = Vector3(1000, 1, 1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_e304g"]
size = Vector3(2.1325378, 2.9669495, 1.788208)

[node name="Node3D" type="Node3D"]

[node name="Player" parent="." instance=ExtResource("2_q2uwy")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1541648, 2.7478411, -13.782367)

[node name="SnowParticles" type="CPUParticles3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.3262415, -3.3104305)
amount = 250
randomness = 0.5
lifetime_randomness = 0.1
mesh = SubResource("QuadMesh_g86mt")
emission_shape = 3
emission_box_extents = Vector3(10, 1, 5)
direction = Vector3(0, -1, 0)
gravity = Vector3(0, 0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 25.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_5e1uj")

[node name="WindAudio" type="AudioStreamPlayer" parent="WorldEnvironment"]
stream = ExtResource("3_n7ce1")
autoplay = true
parameters/looping = true
script = ExtResource("4_5ulvj")

[node name="Ocean" type="StaticBody3D" parent="."]
metadata/ground = "snow"

[node name="Mesh" type="MeshInstance3D" parent="Ocean"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034121037, -0.13232398, -0.7484914)
material_override = ExtResource("1_q2uwy")
mesh = SubResource("PlaneMesh_qetym")
skeleton = NodePath("")

[node name="Collision" type="CollisionShape3D" parent="Ocean"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.62923765, 0)
shape = SubResource("BoxShape3D_q2uwy")

[node name="Island" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7.5372696, 0)
use_collision = true
radius = 9.833695
radial_segments = 24
rings = 8

[node name="Sections" type="Node3D" parent="."]

[node name="Section1" type="Node3D" parent="Sections"]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Sections/Section1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.955662, 4.737488, -18.949688)
radius = 6.7094727
height = 22.094849

[node name="CSGBox3D" type="CSGBox3D" parent="Sections/Section1"]
transform = Transform3D(1, 0, 0, 0, 0.97953314, -0.20128308, 0, 0.20128308, 0.97953314, -1.531517, -0.25128365, -14.326071)
use_collision = true
size = Vector3(4.098633, 1, 6.7285156)
metadata/ground = "wood"

[node name="Lighthouse" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4831586, 0)
mesh = ExtResource("5_g86mt")

[node name="EnterLighthouseArea" type="Area3D" parent="Lighthouse" node_paths=PackedStringArray("destination")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.9892716)
script = ExtResource("7_jvpjp")
destination = NodePath("../../LighthouseRoom/EnterPoint")
actionbar_prompt = "Press E to enter"

[node name="Collision" type="CollisionShape3D" parent="Lighthouse/EnterLighthouseArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05230713, 0.85198975, 0.3881836)
shape = SubResource("BoxShape3D_e304g")

[node name="ExitPoint" type="Node3D" parent="Lighthouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.06247878, 1.6217206, -4.1460495)

[node name="LighthouseRoom" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 500, 0)
use_collision = true
flip_faces = true
size = Vector3(10, 5, 10)
metadata/ground = "wood"

[node name="EnterPoint" type="Node3D" parent="LighthouseRoom"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -4.159851, -1.2760925, 0)

[node name="ExitLighthouseArea" type="Area3D" parent="LighthouseRoom" node_paths=PackedStringArray("destination")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.8338094, -1.1789856, -0.022398472)
script = ExtResource("7_jvpjp")
destination = NodePath("../../Lighthouse/ExitPoint")
actionbar_prompt = "Press E to exit"

[node name="Collision" type="CollisionShape3D" parent="LighthouseRoom/ExitLighthouseArea"]
shape = SubResource("BoxShape3D_e304g")

[node name="FadeRect" type="ColorRect" parent="."]
unique_name_in_owner = true
offset_left = -38.0
offset_top = -41.0
offset_right = 1187.0
offset_bottom = 672.0
mouse_filter = 2
color = Color(0, 0, 0, 0)
script = ExtResource("8_t871u")

[connection signal="body_entered" from="Lighthouse/EnterLighthouseArea" to="Lighthouse/EnterLighthouseArea" method="_on_body_entered"]
[connection signal="body_exited" from="Lighthouse/EnterLighthouseArea" to="Lighthouse/EnterLighthouseArea" method="_on_body_exited"]
[connection signal="body_entered" from="LighthouseRoom/ExitLighthouseArea" to="LighthouseRoom/ExitLighthouseArea" method="_on_body_entered"]
[connection signal="body_exited" from="LighthouseRoom/ExitLighthouseArea" to="LighthouseRoom/ExitLighthouseArea" method="_on_body_exited"]
